# WorkTable

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: worktable_benchmarks.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  name_generator.rs
codegen/src/common/: mod.rs  name_generator.rs
codegen/src/common/generator/: locks.rs  mod.rs  primary_key.rs  row.rs  wrapper.rs
codegen/src/common/generator/index/: cdc.rs  info.rs  mod.rs  usual.rs
codegen/src/common/generator/queries/: delete.rs  in_place.rs  locks.rs  select.rs  type.rs  unsized_.rs  update.rs
codegen/src/common/generator/table/: impls.rs  index_fns.rs  mod.rs  select_executor.rs
codegen/src/common/model/: column.rs  queries.rs
codegen/src/common/parser/: attribute.rs  columns.rs  config.rs  index.rs  name.rs  punct.rs
codegen/src/common/parser/queries/: delete.rs  in_place.rs  mod.rs  operation.rs  select.rs  update.rs
codegen/src/generators/: mod.rs
codegen/src/generators/in_memory/: locks.rs  mod.rs  primary_key.rs  row.rs  wrapper.rs
codegen/src/generators/in_memory/index/: cdc.rs  info.rs  mod.rs  usual.rs
codegen/src/generators/in_memory/queries/: delete.rs  in_place.rs  locks.rs  mod.rs  select.rs  type.rs  unsized_.rs  update.rs
codegen/src/generators/in_memory/table/: impls.rs  index_fns.rs  mod.rs  select_executor.rs
codegen/src/generators/persist/: locks.rs  mod.rs  primary_key.rs  row.rs  wrapper.rs
codegen/src/generators/persist/index/: cdc.rs  info.rs  mod.rs  usual.rs
codegen/src/generators/persist/queries/: delete.rs  in_place.rs  locks.rs  mod.rs  select.rs  type.rs  unsized_.rs  update.rs
codegen/src/generators/persist/table/: impls.rs  index_fns.rs  mod.rs  select_executor.rs
codegen/src/generators/read_only/: locks.rs  mod.rs  primary_key.rs  row.rs  wrapper.rs
codegen/src/generators/read_only/index/: info.rs  mod.rs  usual.rs
codegen/src/generators/read_only/queries/: mod.rs  select.rs  type.rs
codegen/src/generators/read_only/table/: impls.rs  index_fns.rs  mod.rs  select_executor.rs
codegen/src/mem_stat/: mod.rs
codegen/src/migration_engine/: generator.rs  mod.rs  parser.rs
codegen/src/persist_index/: generator.rs  mod.rs  parser.rs  space.rs
codegen/src/persist_index/space/: events.rs  index.rs  mod.rs
codegen/src/persist_table/: mod.rs  parser.rs
codegen/src/persist_table/generator/: mod.rs  space.rs  space_deserialize.rs  space_serialize.rs
codegen/src/persist_table/generator/space/: mod.rs  space_data_impl.rs  space_index_impl.rs  worktable_impls.rs
codegen/src/persist_table/generator/space_file/: mod.rs  worktable_impls.rs
codegen/src/s3_persistence/: mod.rs
codegen/src/worktable/: mod.rs
codegen/src/worktable/generator/: index.rs  locks.rs  mod.rs  primary_key.rs  row.rs  table.rs  table_old.rs  wrapper.rs
codegen/src/worktable/generator/index/: cdc.rs  info.rs  mod.rs  usual.rs
codegen/src/worktable/generator/queries/: delete.rs  in_place.rs  locks.rs  select.rs  type.rs  update.rs
codegen/src/worktable/generator/table/: impls.rs  index_fns.rs  mod.rs  select_executor.rs
codegen/src/worktable/model/: column.rs
codegen/src/worktable/parser/: attribute.rs  columns.rs  config.rs  index.rs  mod.rs
codegen/src/worktable_version/: mod.rs
examples/: Cargo.toml
examples/data/s_5_trace/: .wt.data  primary.wt.idx
examples/src/: main.rs
(+225 files in other folders)
