[workspace]
members = ["codegen", "examples", "performance_measurement", "performance_measurement/codegen"]

[package]
name = "worktable"
version = "0.9.0-beta0.1.1"
edition = "2024"
authors = ["Handy-caT"]
license = "MIT"
repository = "https://github.com/pathscale/WorkTable"
description = "WorkTable is in-memory storage"

[features]
perf_measurements = ["dep:performance_measurement", "dep:performance_measurement_codegen"]
s3-support = ["dep:rusty-s3", "dep:url", "dep:reqwest", "dep:walkdir", "worktable_codegen/s3-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
convert_case = "0.6.0"
data_bucket = "=0.3.13"
# data_bucket = { git = "https://github.com/pathscale/DataBucket", branch = "page_cdc_correction", version = "0.2.7" }
# data_bucket = { path = "../DataBucket", version = "0.3.11" }
derive_more = { version = "2.0.1", features = ["from", "error", "display", "debug", "into"] }
eyre = "0.6.12"
fastrand = "2.3.0"
futures = "0.3.30"
indexset = { version = "=0.16.0", features = ["concurrent", "cdc", "multimap"] }
# indexset = { path = "../indexset", version = "0.15.0", features = ["concurrent", "cdc", "multimap"] }
# indexset = { package = "wt-indexset", version = "=0.12.12", features = ["concurrent", "cdc", "multimap"] }
lockfree = { version = "0.5.1" }
log = "0.4.29"
ordered-float = "5.0.0"
parking_lot = "0.12.3"
performance_measurement = { path = "performance_measurement", version = "0.1.0", optional = true }
performance_measurement_codegen = { path = "performance_measurement/codegen", version = "0.1.0", optional = true }
prettytable-rs = "^0.10"
psc-nanoid = { version = "3.1.1", features = ["rkyv", "packed"] }
rkyv = { version = "0.8.9", features = ["uuid-1"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls-webpki-roots", "charset", "http2"] }
rusty-s3 = { package = "rusty-s3-temp", version = "0.9.0", optional = true }
smart-default = "0.7.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = { version = "2", optional = true }
uuid = { version = "1.10.0", features = ["v4", "v7"] }
walkdir = { version = "2", optional = true }
worktable_codegen = { path = "codegen", version = "=0.9.0-beta0.1.0" }

[dev-dependencies]
chrono = "0.4.43"
rand = "0.9.1"
