[package]
name = "worktable_codegen"
version = "0.9.0-alpha1"
edition = "2024"
license = "MIT"
description = "WorkTable codegeneration crate"

[features]
s3-support = []

[lib]
name = "worktable_codegen"
path = "src/lib.rs"
proc-macro = true

[dependencies]
rkyv = { version = "0.7.45" }
syn = { version = "2.0.74", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
convert_case = "0.6.0"