[package]
name = "wt-examples"
version = "0.1.0"
edition = "2021"

[dependencies]

worktable = { path = "..", version = "0.5.0", features = ["perf_measurements"] }
rkyv = { version = "0.8.9", features = ["uuid-1"] }
lockfree = "0.5.1"
derive_more = { version = "1.0.0", features = ["full"] }
eyre = "0.6.12"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
indexset = { version = "0.11.2", features = ["concurrent", "cdc", "multimap"] }



